--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+python-dotenv==1.1.0
 requests==2.32.3
 urllib3==2.3.0
 waitress==3.0.2
